[package]
name = "tmr"
version = "0.1.0"
edition = "2021"
description = "timer for your cli"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/tmr"

[dependencies]
ratatui = "0.29.0"
tokio = { version = "1.41.1", features = [
  "rt",
  "macros",
  "time",
  "rt-multi-thread",
] }
futures = "0.3.30"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tui-big-text = "0.7.0"
